<merge xmlns:android="http://schemas.android.com/apk/res/android" >

	<TextView
		android:text="@string/question_prefix"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22.0sp"
		android:id="@+id/Title"
		android:textStyle="bold" />

	<com.echo.holographlibrary.PieGraph
		android:layout_width="match_parent"
		android:layout_height="@dimen/pie_graph_height"
		android:id="@+id/PieGraph"/>

	<TextView
		android:text="@string/statistics"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="4dp"
		android:textSize="18.0sp"
		android:textStyle="bold"/>

	<TextView
		android:text="@string/pie_graph_correct"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textSize="16.0sp"
		android:id="@+id/Correct"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray"/>

	<TextView
		android:text="@string/pie_graph_incorrect"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="4dp"
		android:textSize="16.0sp"
		android:id="@+id/Incorrect"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray"/>

	<TextView
		android:text="@string/pie_graph_no_answers"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textSize="16.0sp"
		android:id="@+id/NoAnswer"/>

</merge>
